--- a/Sidebar.html
+++ b/Sidebar.html
@@ -6,28 +6,23 @@
   bottom: 54px;
   top: 0;
 }
-
 .branding-text {
   left: 7px;
   position: relative;
   top: 3px;
 }
-
 .logo {
   vertical-align: middle;
 }
-
 .width-100 {
   width: 100%;
   box-sizing: border-box;
   -webkit-box-sizing : border-box;‌
   -moz-box-sizing : border-box;
 }
-
 label {
   font-weight: bold;
 }
-
 #creator-options,
 #respondent-options {
   background-color: #eee;
@@ -36,18 +31,15 @@ label {
   border-style: solid;
   display: none;
 }
-
 #creator-email,
 #respondent-email,
 #button-bar,
 #submit-subject {
   margin-bottom: 10px;
 }
-
 #response-step {
   display: inline;
 }
-
 </style>
 
 <div class="sidebar branding-below">
@@ -82,6 +74,9 @@ label {
       <label for="submit-notice">Notification email body:</label>
       <textarea rows="8" cols="40" id="submit-notice"
           class="width-100"></textarea>
+      <label for="submit-foot">email footer text:</label>
+      <textarea rows="8" cols="40" id="submit-foot"
+          class="width-100"></textarea>
     </div>
 
     <div class="block" id="button-bar">
@@ -114,7 +109,6 @@ label {
        .withUserObject($('#button-bar').get())
        .getSettings();
   });
-
   /**
    * Callback function that populates the notification options using
    * previously saved values.
@@ -131,17 +125,18 @@ label {
     $('#submit-notice').val(!settings.responseText ?
        'Thank you for responding to our form!' :
        settings.responseText);
+    $('#submit-foot').val(!settings.responseFoot ?
+       'You received this email because you registered on-line for an event at xxx' :
+       settings.responseFoot);
 
-    if (settings.creatorNotify === 'true') {
+if (settings.creatorNotify === 'true') {
       $('#creator-notify').prop('checked', true);
       $('#creator-options').show();
     }
-
     if (settings.respondentNotify === 'true') {
       $('#respondent-notify').prop('checked', true);
       $('#respondent-options').show();
     }
-
     // Fill the respondent email select box with the
     // titles given to the form's text Items. Also include
     // the form Item IDs as values so that they can be
@@ -153,7 +148,6 @@ label {
     }
     $('#respondent-email').val(settings.respondentEmailItemId);
   }
-
   /**
    * Toggles the visibility of the form creator notification options.
    */
@@ -165,7 +159,6 @@ label {
       $('#creator-options').hide();
     }
   }
-
   /**
    * Toggles the visibility of the form sumbitter notification options.
    */
@@ -177,7 +170,6 @@ label {
       $('#respondent-options').hide();
     }
   }
-
   /**
    * Ensures that the entered step is a number between 1
    * and 99999, inclusive.
@@ -192,7 +184,6 @@ label {
       $('#response-step').val(99999);
     }
   }
-
   /**
    * Collects the options specified in the add-on sidebar and sends them to
    * be saved as Properties on the server.
@@ -206,12 +197,10 @@ label {
       'creatorNotify': creatorNotify,
       'respondentNotify': respondentNotify
     };
-
     // Only save creator options if notify is turned on
     if (creatorNotify) {
       settings.responseStep = $('#response-step').val();
       settings.creatorEmail = $('#creator-email').val().trim();
-
       // Abort save if entered email is blank
       if (!settings.creatorEmail) {
         showStatus('Enter an owner email', $('#button-bar'));
@@ -219,14 +208,14 @@ label {
         return;
       }
     }
-
     // Only save respondent options if notify is turned on
     if (respondentNotify) {
       settings.respondentEmailItemId = $('#respondent-email').val();
       settings.responseSubject = $('#submit-subject').val();
       settings.responseText = $('#submit-notice').val();
-    }
+      settings.responseFoot = $('#submit-foot').val();
 
+}
     // Save the settings on the server
     google.script.run
         .withSuccessHandler(
@@ -242,7 +231,6 @@ label {
         .withUserObject(this)
         .saveSettings(settings);
   }
-
   /**
    * Inserts a div that contains an status message after a given element.
    *
